# JingleMachinePython

./: .gitignore  ANTI_REGRESSION_TESTS.md  ARCHITETTURA_2.0.md  CHANGELOG.md  FEATURES_2.0.md  README.md  ROADMAP_2.0.md  TAURI_POSTMORTEM.md  TECNOLOGIE_2.0.md  analisi_progetto.txt  create_header_logo.ps1  jingle_config.json  main.py  organize_docs.ps1  requirements.txt  resize_icons.ps1
AJM-free/: AVVIA_WINDOWS.bat  GUIDA_USO.md  ISTRUZIONI_LINUX.md  ISTRUZIONI_MACOS.md  ISTRUZIONI_WINDOWS.md  LICENSE.txt  README.md  START_HERE.md  main.py  requirements.txt  start_linux.sh  start_macos.sh  start_windows.bat
APP/: .eslintignore  .eslintrc.json  .gitignore  App.test.tsx  App.tsx  README.md  app_test_output.txt  app_test_output_v10.txt  app_test_output_v11.txt  app_test_output_v12.txt  app_test_output_v13.txt  app_test_output_v2.txt  app_test_output_v3.txt  app_test_output_v5.txt  app_test_output_v6.txt  app_test_output_v7.txt  app_test_output_v8.txt  app_test_output_v9.txt  build_log.txt  builder_log_final.txt  builder_log_new_dir.txt  constants.ts  db.ts  electron_compile_log.txt  hooks.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.js  test_output.txt  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
LANDINGPAGE/: README.md  build_log.txt  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
WEB/: App.tsx  db.ts  (+13 more)
runtime-radio-2.0/src-tauri/: Cargo.toml  Cargo.toml.backup  default_profile.json  tauri.conf.json  tauri.conf.json.backup
runtime-radio-2.0/src-tauri/src/: main.rs
runtime-radio-2.0/src-tauri/src/core/: audio_engine.rs  commands.rs  config_manager.rs
(+157 files in other folders)
