[package]
name = "runtime-radio"
version = "0.1.0"
description = "Runtime Radio Advanced Jingle Machine 2.0"
authors = ["Runtime Radio Team"]
license = "MIT"
repository = "https://github.com/Pitz72/JingleMachinePython"
default-run = "runtime-radio"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.7.1", features = [] }

[dependencies]
tauri = { version = "2.7.1", features = ["shell-open", "window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
